{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Controller",
            "id": "20196bed-a568-465f-b09f-442facc696fd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "5e62a51d-167d-469a-99bf-35a54f3187e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7c2e5e40-cbcd-4e01-b090-80cc3f8bc77f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "28a8f092-0acf-46ec-a639-97d49fb9b7ae",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "769c53a2-a7d8-4669-86f6-86b310428c1e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e50085f3-f41e-41a7-abb0-798d424a09c4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4c424005-5314-4bfe-8a3c-9ae07571fddb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Attack",
            "id": "7d1878de-4f32-4850-a39d-5eda8fbaec06",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "146f213e-a4d4-4103-84d3-ace6d2394114",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "74beceef-25aa-415e-8aba-ef494a578e38",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerActions",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Talk",
            "id": "911cfc52-1162-4694-91ad-491e596dc49f",
            "actions": [
                {
                    "name": "Talk",
                    "type": "Button",
                    "id": "76c889ea-b996-4bc3-8720-38f236c5a6b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4ed50ebe-9c5f-408b-b2df-34fa8af836af",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Talk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerActions",
            "bindingGroup": "PlayerActions",
            "devices": []
        }
    ]
}